--- a/hkdyy/package.json
+++ b/hkdyy/package.json
@@ -10,8 +10,10 @@
     "antd": "^3.8.4",
     "antd-mobile": "^2.2.1",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "dva": "^2.3.1",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.6.2",
     "react-addons-css-transition-group": "^15.6.2",
     "umi": "^1.0.0",
     "umi-plugin-dva": "^0.7.1"
