--- a/hkdxcy/package.json
+++ b/hkdxcy/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hkdtaro",
+  "name": "hkdxcy",
   "version": "1.0.0",
   "private": true,
-  "description": "红蝌蚪小程序项目起步",
+  "description": "红蝌蚪小程序",
   "main": "index.js",
   "scripts": {
     "build:weapp": "taro build --type weapp",
@@ -34,7 +34,6 @@
     "@tarojs/plugin-babel": "^1.0.0-beta.21",
     "@tarojs/plugin-csso": "^1.0.0-beta.21",
     "@tarojs/plugin-less": "^1.0.0-beta.21",
-    "@tarojs/plugin-typescript": "^1.0.0-beta.21",
     "@tarojs/plugin-uglifyjs": "^1.0.0-beta.21",
     "@tarojs/webpack-runner": "^1.0.0-beta.21",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -47,7 +46,6 @@
     "eslint-config-taro": "^1.0.0-beta.21",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-taro": "^1.0.0-beta.21",
-    "typescript": "^3.0.1"
+    "eslint-plugin-taro": "^1.0.0-beta.21"
   }
 }
