--- a/hkdxcy/project.config.json
+++ b/hkdxcy/project.config.json
@@ -1,7 +1,7 @@
 {
   "miniprogramRoot": "./dist",
-  "projectname": "hkdtaro",
-  "description": "红蝌蚪小程序项目起步",
+  "projectname": "hkdxcy",
+  "description": "红蝌蚪小程序",
   "appid": "touristappid",
   "setting": {
     "urlCheck": true,
