--- a/hkdyy/package.json
+++ b/hkdyy/package.json
@@ -7,11 +7,14 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@antv/g2": "^3.2.7",
+    "ant-design-pro": "^2.0.0",
     "antd": "^3.8.4",
     "antd-mobile": "^2.2.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "dva": "^2.3.1",
+    "moment": "^2.22.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
     "react-addons-css-transition-group": "^15.6.2",
